# summon

./: .gitignore  LICENSE  README.md  forge-openai.yaml  forge.yaml  pyproject.toml  summon-openai.yaml  summon.yaml
.github/workflows/: ci.yml  forge-pipeline.yml  publish.yml  summon-pipeline.yml
src/forge/: cli.py  config.py  executor.py  models.py  pipeline.py  state.py  supervisor.py  workspace.py
src/forge/agents/: acceptance_criteria_gen.py  acceptance_fixer.py  acceptance_test_gen.py  ambiguity.py  architect.py  base.py  bug_fixer.py  code_regenerator.py  code_reviewer.py  coder.py  critic.py  docs_writer.py  github_agent.py  import_fixer.py  integrator.py  lld.py  packager.py  prd.py  publisher.py  sdd.py  spec_writer.py  splitter.py  test_writer.py
src/forge/prompts/: stage2.py  stage3.py  stage4.py  stage5.py  supervisor.py
src/forge/schemas/: component.py  hld.py  prd.py  quality.py  release.py  spec.py
src/forge/stages/: stage1_idea.py  stage2_planning.py  stage3_design.py  stage4_implement.py  stage5_testing.py  stage6_release.py
src/forge/tools/: file_tools.py  github_tools.py  publish_tools.py  shell_tools.py
src/oneshot/: cli.py  config.py  models.py  pipeline.py  state.py  supervisor.py  workspace.py
src/oneshot/agents/: acceptance_criteria_gen.py  acceptance_fixer.py  acceptance_test_gen.py  ambiguity.py  architect.py  base.py  bug_fixer.py  code_regenerator.py  code_reviewer.py  coder.py  critic.py  docs_writer.py  github_agent.py  import_fixer.py  integrator.py  lld.py  packager.py  prd.py  publisher.py  sdd.py  spec_writer.py  splitter.py  test_writer.py
src/oneshot/prompts/: stage1.py
src/oneshot/schemas/: sdd.py
src/oneshot/stages/: stage1_idea.py  stage2_planning.py  stage3_design.py  stage4_implement.py  stage5_testing.py  stage6_release.py
src/oneshot/tools/: github_tools.py  shell_tools.py
src/summon/: cli.py  config.py  models.py  pipeline.py  state.py  supervisor.py  workspace.py
src/summon/agents/: acceptance_criteria_gen.py  acceptance_fixer.py  acceptance_test_gen.py  adversarial_fixer.py  adversarial_tester.py  ambiguity.py  architect.py  base.py  bug_fixer.py  coder.py  (+15 more)
tests/: test_agents_base.py  test_config.py  test_executor.py  test_pipeline.py  test_schemas.py  test_supervisor.py  test_workspace.py
(+8 files in other folders)
