[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneshot"
version = "0.1.0"
description = "Autonomous idea-to-product pipeline — one idea in, working project out"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
oneshot = "oneshot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oneshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
