[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summon-ai"
version = "0.1.0"
description = "Autonomous idea-to-product pipeline — one idea in, working project out"
license = "MIT"
authors = [{ name = "npow" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "llm", "ai", "code-generation", "autonomous-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/npow/summon"
Repository = "https://github.com/npow/summon"
Issues = "https://github.com/npow/summon/issues"

[project.optional-dependencies]
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
summon = "summon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/summon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
